--- a/charts/sonarr/Chart.yaml
+++ b/charts/sonarr/Chart.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: v2
-appVersion: v0.20.1316
+appVersion: 3.0.9
 description: Smart PVR for newsgroup and bittorrent users
 name: sonarr
 version: 16.3.2
@@ -16,5 +16,5 @@ sources:
   - https://github.com/k8s-at-home/container-images
 dependencies:
 - name: common
-  version: 1.1.1
+  version: 1.1.3
   repository: https://bjw-s.github.io/helm-charts/
