--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -1,10 +1,10 @@
 image:
   # -- image repository
-  repository: ghcr.io/k8s-at-home/sonarr
+  repository: ghcr.io/linuxserver/sonarr
   # @default -- chart.appVersion
   tag:
   # -- image pull policy
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 # -- environment variables.
 # @default -- See below
@@ -76,12 +76,12 @@ metrics:
     # -- Configure additionial rules for the chart under this key.
     # @default -- See prometheusrules.yaml
     rules: []
-      # - alert: SonarrDown
+      # - alert: RadarrDown
       #   annotations:
-      #     description: Sonarr service is down.
-      #     summary: Sonarr is down.
+      #     description: Radarr service is down.
+      #     summary: Radarr is down.
       #   expr: |
-      #     sonarr_system_status == 0
+      #     radarr_system_status == 0
       #   for: 5m
       #   labels:
       #     severity: critical
@@ -95,7 +95,7 @@ metrics:
       pullPolicy: IfNotPresent
     env:
       # -- metrics port
-      port: 9794
+      port: 9793
       # -- Set to true to enable gathering of additional metrics (slow)
       additionalMetrics: false
       # -- Set to true to enable gathering unknown queue items
