--- a/charts/sonarr/templates/prometheusrules.yaml
+++ b/charts/sonarr/templates/prometheusrules.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.metrics.enabled .Values.metrics.prometheusRule.enabled }}
-{{- include "bjw-s.common.values.setup" . -}}
+{{- include "bjw-s.common.loader.init" . }}
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
