--- a/charts/pirate-ship/Chart.yaml
+++ b/charts/pirate-ship/Chart.yaml
@@ -23,12 +23,12 @@ sources:
   - https://github.com/k8s-at-home/container-images
 dependencies:
 - name: radarr
-  version: 1.0.0
+  version: 1.1.0
   repository: https://graytonward.com/homelab-helm-charts/
   condition: radarr.enabled
 
 - name: sonarr
-  version: 1.0.0
+  version: 1.1.1
   repository: https://graytonward.com/homelab-helm-charts/
   condition: sonarr.enabled
 
@@ -46,3 +46,8 @@ dependencies:
   version: 1.0.0
   repository: https://graytonward.com/homelab-helm-charts/
   condition: radarr.enabled,sonarr.enabled
+
+- name: overseerr
+  version: 1.0.0
+  repository: https://graytonward.com/homelab-helm-charts/
+  condition: overseerr.enabled
