Fixed whitespace issue

--- a/charts/pirate-ship/values.yaml
+++ b/charts/pirate-ship/values.yaml
@@ -24,6 +24,11 @@ sonarr:
     config:
       enabled: false
 
+prowlarr:
+  persistence:
+    config:
+      enabled: false
+
 transmission:
   enabled: false
   persistence:
