--- a/charts/pirate-ship/templates/configarr-config.yaml
+++ b/charts/pirate-ship/templates/configarr-config.yaml
@@ -45,6 +45,7 @@ data:
                     - name: password
                       value: {{ .Values.nzbget.env.NZBGET_PASS | default "tegbzn6789" | quote }}
                     {{- end }}
+                    {{- end }}
               {{- end }}
         {{- end }}
         {{- if .Values.sonarr.enabled }}
@@ -77,10 +78,16 @@ data:
                       value: {{ .Values.nzbget.service.main.ports.http.port }}
                     - name: tvCategory
                       value: "Series"
+                    {{- if .Values.nzbget.env  }}
+                    {{- if .Values.nzbget.env.NZBGET_USER}}
                     - name: username
                       value: {{ .Values.nzbget.env.NZBGET_USER | default "nzbget" | quote }}
+                    {{- end }}
+                    {{- if .Values.nzbget.env.NZBGET_PASS}}
                     - name: password
                       value: {{ .Values.nzbget.env.NZBGET_PASS | default "tegbzn6789" | quote }}
+                    {{- end }}
+                    {{- end }}
               {{- end }}
         {{- end }}
         {{- if or .Values.sonarr.enabled .Values.radarr.enabled }}
