--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Run chart-testing (list-changed)
         id: list-changed
         run: |
-          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch --charts ./charts }})
+          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }} --charts ./charts)
           if [[ -n "$changed" ]]; then
             echo "::set-output name=changed::true"
           fi
