--- a/charts/homepage/values.yaml
+++ b/charts/homepage/values.yaml
@@ -48,15 +48,31 @@ ingress:
 
 # All the config files for Homepage can be specified under their relevant config block.
 config:
+  # To use an existing ConfigMap uncomment this line and specify the name
+  # useExistingConfigMap: existing-homepage-configmap
   bookmarks:
     - Developer:
         - Github:
             - abbr: GH
-              href: https://github.com
+              href: https://github.com/
   services:
+    - My First Group:
+        - My First Service:
+            href: http://localhost/
+            description: Homepage is awesome
+
+    - My Second Group:
+        - My Second Service:
+            href: http://localhost/
+            description: Homepage is the best
+
+    - My Third Group:
+        - My Third Service:
+            href: http://localhost/
+            description: Homepage is 😎
   widgets:
     - resources:
-      # change backend to 'kubernetes' to use Kubernetes integration. Requires RBAC.
+        # change backend to 'kubernetes' to use Kubernetes integration. Requires RBAC.
         backend: resources
         expanded: true
         cpu: true
@@ -64,30 +80,24 @@ config:
     - search:
         provider: duckduckgo
         target: _blank
+    ## Uncomment to enable Kubernetes integration
     # - kubernetes:
     #     cluster:
-    #       show: false
+    #       show: true
     #       cpu: true
     #       memory: true
     #       showLabel: true
+    #       label: "cluster"
     #     nodes:
     #       show: true
     #       cpu: true
     #       memory: true
     #       showLabel: true
-    # - longhorn:
-    #     expanded: true
-    #     total: true
-    #     labels: true
-        # nodes: true
   kubernetes:
     # change mode to 'cluster' to use RBAC service account
     mode: disable
   docker:
   settings:
-    # providers:
-    #   longhorn:
-    #     url: http://longhorn-frontend.longhorn-system.svc
 
 persistence:
   logs:
