Enable rbac by default

--- a/charts/homepage/values.yaml
+++ b/charts/homepage/values.yaml
@@ -3,13 +3,13 @@ image:
   # tag: v0.6.0
 
 # Enable RBAC. RBAC is necessary to use Kubernetes integration
-enableRbac: false
+enableRbac: true
 
 serviceAccount:
   # Specify a different service account name
   name: homepage
   # Create service account. Needed when RBAC is enabled.
-  create: false
+  create: true
 
 service:
   main:
