--- a/charts/pihole/Chart.yaml
+++ b/charts/pihole/Chart.yaml
@@ -11,6 +11,8 @@ keywords:
   - adblock
 sources:
   - https://github.com/pi-hole/pi-hole
+maintainers:
+  - name: Grayton Ward
 dependencies:
 - name: common
   version: 1.2.1
