--- a/charts/pihole/Chart.yaml
+++ b/charts/pihole/Chart.yaml
@@ -12,7 +12,7 @@ keywords:
 sources:
   - https://github.com/pi-hole/pi-hole
 maintainers:
-  - name: Grayton Ward
+  - name: graytonio
 dependencies:
 - name: common
   version: 1.2.1
