--- a/charts/pirate-ship/templates/configarr-config.yaml
+++ b/charts/pirate-ship/templates/configarr-config.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.autoConfig }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -105,3 +106,4 @@ data:
                   appType: Radarr
               {{- end }}
         {{ end }}
+{{ end }}
