--- a/old-charts/radarr/templates/common.yaml
+++ b/old-charts/radarr/templates/common.yaml
@@ -16,14 +16,10 @@ additionalContainers:
       - name: CONFIG
         value: "/config/config.xml"
       - name: PORT
-        value: "{{ .Values.metrics.exporter.env.port }}"
-      - name: ENABLE_ADDITIONAL_METRICS
-        value: "{{ .Values.metrics.exporter.env.additionalMetrics }}"
-      - name: ENABLE_UNKNOWN_QUEUE_ITEMS
-        value: "{{ .Values.metrics.exporter.env.unknownQueueItems }}"
+        value: "{{ .Values.metrics.exporter.port }}"
     ports:
       - name: metrics
-        containerPort: {{ .Values.metrics.exporter.env.port }}
+        containerPort: {{ .Values.metrics.exporter.port }}
     volumeMounts:
       {{ if .Values.persistence.config.enabled }}
       - name: config
