feat: update external service chart with correct service mapping

--- a/charts/external-service/templates/ingress.yaml
+++ b/charts/external-service/templates/ingress.yaml
@@ -27,7 +27,7 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: homeassistant-external-service
+              name: external-service-{{ .Release.Name }}
               port:
-                name: http
+                name: {{ .Values.port.service }}
 {{ end }}
