fix: better default value

--- a/charts/external-service/values.yaml
+++ b/charts/external-service/values.yaml
@@ -13,6 +13,6 @@ ingress:
   enabled: false
   ingressClassName: ""
   host: myservice.example.com
-  tls: {}
+  tls: []
   annotations: {}
   labels: {}
